# projects-orchestrator

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fleet.yaml.example  justfile  mkdocs.yml  mypy.ini  pyproject.toml  renovate.json  ruff.toml
.agents/: .upgrade-base.json  CAPABILITIES.md  config.yaml  project-init.md  settings.json
.agents/agents/: README.md  code-reviewer.md  explore.md
.agents/docs/: CODE_MAP.md  README.md
.agents/docs/adr/: adr-003-fleet-engine.md  adr-005-cloud-control-plane.md  adr-006-agent-orchestration.md  adr-006-autonomous-heal.md  adr-007-agent-orchestration.md  adr-008-heal-mode-policy-github-approval-plane.md  adr-template.md
.agents/docs/development/: conventions.md  testing.md
.agents/docs/guides/: developer-onboarding.md  enforcement.md  environments.md  issue-metadata.md  self-hosted-ci-runner.md
.agents/hooks/: README.md  _py.sh  agent_guard_adapter.py  dag_workflow.py  package_guard.py  prod_guard.py  statusline.sh
.agents/memory/: README.md  project_context.md  project_roadmap.md  user_role.md
.agents/rules/: go.md  hooks.md  node.md  python.md  rust.md  typescript.md
.agents/scripts/: README.md  backfill_board_done.sh  check_branch_protection.sh  check_contract_freshness.py  create_issue.sh  create_nojira_pr.sh  finish_pr.sh  gen_code_map.py  gh_host.sh  install_hooks.sh  lint_context_budget.sh  lint_memory.sh  monitor_pr.sh  mutation_gate.py  promote_review.sh  push_branch.sh  push_wiki.sh  setup_github.sh  start_issue.sh
.agents/skills/: README.md
.agents/skills/add_adr/: SKILL.md
.agents/skills/add_command/: SKILL.md
.agents/skills/add_hook/: SKILL.md
.agents/skills/audit/: SKILL.md
.agents/skills/checkpoint/: SKILL.md
.agents/skills/create_issue/: SKILL.md
.agents/skills/github_workflow/: SKILL.md
.agents/skills/local_ci/: SKILL.md
.agents/skills/plan/: SKILL.md
.agents/skills/report_upstream_issue/: SKILL.md
.agents/skills/request_review/: SKILL.md
.agents/skills/save_memory/: SKILL.md
.agents/skills/session_summary/: SKILL.md
.agents/skills/start_task/: SKILL.md
.agents/skills/status/: SKILL.md
.agents/skills/token_efficiency/: SKILL.md
.claude/: .session_setup_stamp  .upgrade-base.json  CAPABILITIES.md  config.yaml  project-init.md  settings.json
.claude/agents/: README.md  explore.md
.claude/docs/: CODE_MAP.md  README.md
.claude/docs/adr/: adr-002-mcp-choices.md  adr-003-cockpit-architecture.md  adr-003-descriptor-registry-core.md  adr-004-agent-control-surface.md  adr-004-fleet-monitor-and-runner.md  adr-004-shared-view-model.md  adr-005-upstream-issue-routing-skill.md  adr-template.md
.claude/docs/development/: testing.md
.claude/docs/guides/: developer-onboarding.md  environments.md  issue-metadata.md  secrets.md
.claude/hooks/: README.md  _py.sh  agent_guard_adapter.py  dag_workflow.py  package_guard.py  prod_guard.py
.claude/memory/: MEMORY.md  README.md  SCHEMA.md  feedback_conventions.md  project_context.md  project_roadmap.md  user_role.md
.claude/rules/: go.md  hooks.md  node.md  python.md  rust.md  typescript.md
.claude/scripts/: README.md  create_issue.sh  create_nojira_pr.sh  finish_pr.sh  gen_code_map.py  gh_host.sh  install_hooks.sh  lint_memory.sh  monitor_pr.sh  promote_review.sh  push_branch.sh  push_wiki.sh  setup_github.sh  start_issue.sh
.claude/skills/: README.md
.claude/skills/add_adr/: SKILL.md
.claude/skills/add_command/: SKILL.md
.claude/skills/add_hook/: SKILL.md
.claude/skills/audit/: SKILL.md
.claude/skills/create_issue/: SKILL.md
.claude/skills/diagram/: SKILL.md
.claude/skills/github_workflow/: SKILL.md
.claude/skills/report_upstream_issue/: SKILL.md
.claude/skills/request_review/: SKILL.md
.codex/: hooks.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  docs.yml  feature.yml  test.yml
.github/hooks/: commit-msg  pre-commit  pre-push
.github/workflows/: board-automation.yml  ci.yml  contract-freshness.yml  issue-validation.yml  project-init-upgrade.yml  release.yml  review-status.yml  validate-pr.yml
contrib/systemd/: projects-orchestrator-digest.service  projects-orchestrator-digest.timer  projects-orchestrator-heal.service  projects-orchestrator-heal.timer  projects-orchestrator-serve.service  projects-orchestrator-watch.service  projects-orchestrator-watch.timer
docs/: index.md  overview.html
docs/explanation/: architecture-review-2026-07.md  index.md  interfaces.md  overview.md
docs/how-to/: index.md  scheduled-audit-digest.md  scheduled-heal.md  scheduled-watch.md  serve-dashboard.md
docs/reference/: descriptor-contract-v1.md  descriptor-contract-v2-proposal.md  descriptor-contract-v2.md  index.md
docs/tutorials/: index.md
src/projects_orchestrator/: __init__.py  __main__.py  actions.py  ask.py  audit.py  briefing.py  cache.py  campaign.py  capabilities.py  checks.py  cockpit.py  controller.py  cost.py  descriptor.py  detail.py  digest.py  discovery.py  doctor.py  drift.py  fleet.py  freshness.py  guard.py  hardening.py  heal.py  history.py  html.py  landing.py  memory.py  naming.py  notify.py  observability.py  orphans.py  pool.py  procs.py  registry.py  render.py  runcommands.py  runner.py  runs.py  runtime.py  (+11 more)
tests/: conftest.py  test_actions.py  test_ask.py  test_audit.py  test_briefing.py  test_cache.py  test_campaign.py  test_capabilities.py  test_changed_only.py  test_checks.py  test_cli.py  test_cloud_adapter.py  test_cockpit.py  test_contract.py  test_controller.py  test_cost.py  test_descriptor.py  test_detail.py  test_digest.py  test_discovery.py  test_doctor.py  test_drift.py  test_fleet.py  test_freshness.py  test_gcp.py  test_generic_adapter.py  test_github_adapter.py  test_gitlab_adapter.py  test_guard.py  test_hardening.py  test_heal.py  test_history.py  test_html.py  test_landing.py  test_memory.py  test_mutation_gate.py  test_naming.py  test_notify.py  test_observability.py  test_orphans.py  (+16 more)
(+27 files in other folders)
