[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projects-orchestrator"
version = "0.1.0"
description = "Cross-project orchestration layer for agentic development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vytautas Čepas", email = "vyt.cepas.ve@gmail.com" }]
keywords = ["orchestration", "agents", "claude-code", "project-init"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]
# Runtime is intentionally stdlib-only: the control surface is a CLI an agent
# drives over Bash, and the dashboard is served from http.server (ADR-004).
dependencies = []

[project.scripts]
projects-orchestrator = "projects_orchestrator.__main__:main"

[project.urls]
Repository = "https://github.com/VytCepas/projects-orchestrator"
Issues = "https://github.com/VytCepas/projects-orchestrator/issues"
Changelog = "https://github.com/VytCepas/projects-orchestrator/releases"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/projects_orchestrator"]
