[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projects-orchestrator"
version = "0.1.0"
description = "Cross-project orchestration layer for agentic development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vytautas Čepas", email = "vyt.cepas.ve@gmail.com" }]
keywords = ["orchestration", "agents", "claude-code", "project-init"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
tui = ["textual>=0.86"]

[project.scripts]
projects-orchestrator = "projects_orchestrator.__main__:main"

[project.urls]
Repository = "https://github.com/VytCepas/projects-orchestrator"
Issues = "https://github.com/VytCepas/projects-orchestrator/issues"
Changelog = "https://github.com/VytCepas/projects-orchestrator/releases"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "textual>=0.86",
    "jsonschema>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/projects_orchestrator"]
