[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projects-orchestrator"
version = "0.2.0"
description = "Cross-project orchestration layer for agentic development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vytautas Čepas", email = "vyt.cepas.ve@gmail.com" }]
keywords = ["orchestration", "agents", "claude-code", "project-init"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
tui = ["textual>=0.86"]

[project.scripts]
projects-orchestrator = "projects_orchestrator.__main__:main"

[project.urls]
Repository = "https://github.com/VytCepas/projects-orchestrator"
Issues = "https://github.com/VytCepas/projects-orchestrator/issues"
Changelog = "https://github.com/VytCepas/projects-orchestrator/releases"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "textual>=0.86",
    "jsonschema>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "inspects_agent_launch: exercises _default_agent_run itself (must stub subprocess.run); exempt from the no-live-agent fixture",
]

[tool.hatch.build.targets.wheel]
packages = ["src/projects_orchestrator"]

# Mutation testing (#132). The CI `mutation-tests` job scores test QUALITY: it
# breaks the code on purpose and asks how many broken versions the suite catches.
# Coverage cannot answer that — a suite can execute every line and assert nothing.
#
# Without this section mutmut mutated nothing, the job's gate computed
# `100.0` for an empty run, and the check that exists to catch tests which cannot
# fail was itself a check that could not fail.
#
# `only_mutate` is deliberately narrow and deliberately not "everything". Mutating
# I/O-heavy code (subprocess wrappers, the HTTP server, the TUI) produces mutants
# that survive for reasons unrelated to test quality — a timeout constant nudged
# by one is not a bug anyone can catch — and the noise is how a mutation score
# gets ignored. These are the deterministic modules whose guards actually
# load-bear: the path-traversal guard, the prompt-injection fencing, the
# never-lie run invariant, the pid-reuse guard, and the status/contract parsers.
[tool.mutmut]
source_paths = ["src/projects_orchestrator"]
# mutmut copies the tree into `mutants/` and runs pytest FROM THERE, so anything
# the tests open by path must be copied too. Without this, test_mutation_gate.py
# — which loads the gate script from .agents/scripts/ — dies with FileNotFoundError
# at COLLECTION, taking the whole nightly run down with it. i.e. the fix that made
# the gate honest would have been the thing that stopped it running at all.
# NOTE: a DIRECTORY, not the file. mutmut's copy_also_copy_files does
# `shutil.copy2(path, "mutants"/path)` for a file — and never creates the parent
# dirs, so a nested file entry fails while a directory entry (copytree, which does
# makedirs) works. Verified, not assumed.
also_copy = [".agents/scripts"]
only_mutate = [
    "*/naming.py",
    "*/briefing.py",
    "*/runs.py",
    "*/procs.py",
    "*/digest.py",
    "*/freshness.py",
    "*/adapters/status_url.py",
]
